# ICTAI2025

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
argumentation/: __init__.py  config.py  core.py  data.py  experiments.py  runtime.py
scripts/: compare_to_paper.py  run_experiment.py
