[project]
name = "argumentation-neurosymbolic"
version = "0.1.0"
description = "Refactored neuro-symbolic argumentation experiments for STSB and SICK."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets",
    "fairseq",
    "nltk",
    "numpy",
    "pandas",
    "python-sat",
    "scikit-learn",
    "sentence-transformers",
    "sympy",
    "torch",
    "tqdm",
    "transformers",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["argumentation*"]
